simplified checkForScrollbar, style fixes

--- a/less/modals.less
+++ b/less/modals.less
@@ -124,15 +124,15 @@
   }
 }
 
-.modal-measure-scrollbar{
-  position:absolute;
-  height:100px;
-  width:100px;
-  top:-300px;
-  left:-300px;
-  overflow:scroll;
-  overflow-y:scroll;
-  .inner{ height:200px }
+.modal-measure-scrollbar {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: -300px;
+  left: -300px;
+  overflow: scroll;
+  overflow-y: scroll;
+  .inner{ height: 200px; }
 }
 
 // Scale up the modal
